day-14-platform-guardrails-and-multi-tenancy/examples/kyverno-policy-example.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources

spec:
  validationFailureAction: Enforce

  rules:
    - name: check-resources

      validate:
        message: Requests and limits are required.

        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"

                  limits:
                    cpu: "?*"
                    memory: "?*"
